# test_for_simurg

./: .env.example  .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1fa44a7974f0_init.py  828a35e6c552_users.py  949fbeb36852_added_priority_to_task.py
src/: main.py
src/alembic/: env.py
src/api/routers/: __init__.py  auth.py  health.py  task.py  user.py
src/core/: app.py  config.py
src/db/: base.py  session.py
src/models/: __init__.py  base.py  task.py  user.py
src/schemas/: task.py  token.py  user.py
src/services/: auth.py  auth_service.py  auth_utils.py  jwt_token.py  task_service.py  user_service.py
