
[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Task Management API with FastAPI, SQLAlchemy, ROP"
authors = ["Your Name <m.nakimow@gmail.com>"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
